--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -7,6 +7,7 @@
 @ice-blue: aliceblue;
 @light-grey: #e0e0e0;
 @red: #ff2a2a;
+@sonic-silver: #757575;
 
 @fs-primary: @orange;
 @fs-secondary: @dark-blue;
@@ -14,6 +15,7 @@
 @border-dark: @dark-blue;
 @border-light: @light-grey;
 @fs-error: @red;
+@fs-label: @sonic-silver;
 
 @screen-sm-max: 1200px;
 @screen-xs-max: 768px;
